--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\nemec_000\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/home/pallo/.netbeans/8.0.2/build.properties
